fixed minor scaling issue on mobile

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -37,7 +37,24 @@ div{
       margin-left: auto;
       margin-right: auto;
     }
+    .right{
+      padding-top: 10px;
+    }
   }
+
+  @media (max-width: 320px) {
+     .profile {
+      min-width: 0px !important;
+      max-width: 100% !important;
+    
+    }
+    .left{
+      min-width: 0px !important;
+      max-width: 100% !important;
+
+    }
+  }
+
 
 
   h1{
@@ -46,9 +63,9 @@ div{
 
 
   .left{
-    max-width: 320px !important;
-    width: 320px !important;
-    min-width: 320px !important; 
+    max-width: 320px;
+    width: 320px ;
+    min-width: 320px; 
   }
 
 
